# paprika-core

./: .env  .gitignore  Cargo.toml
db/: Cargo.toml
prisma/: schema.prisma
prisma-cli/: Cargo.toml
prisma/migrations/20231113141643_init_migrations/: migration.sql
prisma/migrations/20231118164348_update_column_defination/: migration.sql
src/: db.rs  main.rs  prisma.rs  test.rs
ws-db/: Cargo.toml
ws-scraper/: Cargo.toml
ws-scraper/src/: card.rs  main.rs
ws-scraper/src/card/: db_helper.rs  scrap_processor.rs  types.rs
