[package]
name = "ws-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ws-db = { path = "../ws-db" }

headless_chrome = { version = "1.0.8" }
serde = "1.0.192"
reqwest = { version = "0.11.22", features = ["blocking"] }
scraper = "0.18.1"
tokio = "1.34.0"
